# Weixin2

./: Cargo.toml  Open2Weixin.bat  README.md  build.rs
.github/workflows/: ci.yml  release.yml  rust.yml
src/: main.rs  quick_launch.rs
